apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile('com.sparkjava:spark-core:2.9.0')
    compile('com.sparkjava:spark-template-handlebars:2.7.1')
    compile('ch.qos.logback:logback-classic:1.2.3')
    compile("mysql:mysql-connector-java:8.0.16")
    testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
    testCompile('org.assertj:assertj-core:3.11.1')
    testCompile('com.google.guava:guava:27.1-jre')
    testCompile('org.apache.httpcomponents:httpclient:4.5.9')
}
